--- a/app/src/main/res/layout-land/activity_cal_protein.xml
+++ b/app/src/main/res/layout-land/activity_cal_protein.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mainprofilebackground"
+    android:background="@color/colorPrimary"
     tools:context=".Profiles.CaloriesPlan.CalProteinActivity">
     <RelativeLayout
         android:layout_alignParentTop="true"
@@ -13,17 +12,18 @@
         android:layout_height="wrap_content"
         >
         <ImageView
+            android:layout_width="20dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/backrow"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
             android:id="@+id/flsettingBackRow"
             />
         <RelativeLayout
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_below="@id/flsettingBackRow"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
@@ -34,19 +34,18 @@
 
             <ImageView
                 android:layout_centerInParent="true"
-                android:layout_marginEnd="10dp"
+                android:layout_width="80dp"
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
                 android:id="@+id/defuserimg"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
+                android:layout_marginEnd="15dp"
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
                 android:src="@drawable/defuserimage" />
 
             <TextView
-                android:paddingTop="15dp"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/defuserimg"
                 android:layout_alignParentEnd="true"
@@ -55,12 +54,13 @@
                 android:gravity="start"
                 android:text="PROTEIN"
                 android:textColor="@color/colorWhite"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/firstlayout"
         android:layout_centerInParent="true"
         android:id="@+id/secondlayout"
