--- a/app/src/main/res/layout/activity_cal_fats.xml
+++ b/app/src/main/res/layout/activity_cal_fats.xml
@@ -37,7 +37,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
@@ -47,7 +47,7 @@
 
             <TextView
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
